fix Ensure text remains visible during webfont load - by - Google PageSpeed Insights

--- a/src/style/admin-common.scss
+++ b/src/style/admin-common.scss
@@ -38,6 +38,7 @@
   font-family: 'groovy-gui';
   font-weight: normal;
   font-style: normal;
+  font-display: block;
   src: url("../fonts/groovy-gui.woff") format("woff");
 }
 
