--- a/src/style/admin/edit.scss
+++ b/src/style/admin/edit.scss
@@ -6,6 +6,7 @@ ICON FONT
   font-family: 'groovy-gui';
   font-weight: normal;
   font-style: normal;
+  font-display: block;
   src: url('../fonts/groovy-gui.woff') format('woff');
 }
 
