--- a/src/style/shared/crane-font.scss
+++ b/src/style/shared/crane-font.scss
@@ -3,6 +3,7 @@
   src: url('../fonts/crane-font.woff?hhxb42') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 .gmi {
